# HDC2080WithAWSMQTT

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  awsMQTT.c  awsMQTT.h  fileSystem.c  fileSystem.h  logic.c  logic.h  main.c  tempSensor.c  tempSensor.h  wifiConfig.c  wifiConfig.h
